[gd_scene load_steps=13 format=2]

[ext_resource path="res://tres/theme_dark.tres" type="Theme" id=1]
[ext_resource path="res://scenes/effects/AudioVisualiser.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/graphics/icon_play.svg" type="Texture" id=3]
[ext_resource path="res://tres/default_font_64.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/MusicPlayer.gd" type="Script" id=5]
[ext_resource path="res://assets/graphics/icon_rewind.svg" type="Texture" id=6]
[ext_resource path="res://assets/graphics/icon_previous.svg" type="Texture" id=7]
[ext_resource path="res://assets/graphics/icon_fast_forward.svg" type="Texture" id=8]
[ext_resource path="res://assets/graphics/icon_next.svg" type="Texture" id=9]
[ext_resource path="res://assets/graphics/icon_shuffle.svg" type="Texture" id=10]
[ext_resource path="res://assets/graphics/icon_file.png" type="Texture" id=11]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="MusicPlayer" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream_paused = true

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginC" type="MarginContainer" parent="PanelContainer"]
margin_right = 1280.0
margin_bottom = 720.0
custom_constants/margin_right = 32
custom_constants/margin_top = 16
custom_constants/margin_left = 32
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxC" type="VBoxContainer" parent="PanelContainer/MarginC"]
margin_left = 32.0
margin_top = 16.0
margin_right = 1248.0
margin_bottom = 704.0

[node name="AudioVisualiser" parent="PanelContainer/MarginC/VBoxC" instance=ExtResource( 2 )]
visible = false
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 800.0
margin_right = 656.0
margin_bottom = 864.0
audio_player = NodePath("../../../../AudioStreamPlayer")

[node name="SongName" type="Label" parent="PanelContainer/MarginC/VBoxC"]
margin_right = 1216.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )
custom_fonts/font = ExtResource( 4 )
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayInfo" type="HBoxContainer" parent="PanelContainer/MarginC/VBoxC"]
margin_top = 72.0
margin_right = 1216.0
margin_bottom = 137.0

[node name="TimeNow" type="Label" parent="PanelContainer/MarginC/VBoxC/PlayInfo"]
margin_bottom = 65.0
custom_fonts/font = ExtResource( 4 )

[node name="Progress" type="HSlider" parent="PanelContainer/MarginC/VBoxC/PlayInfo"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 8.0
margin_top = 16.0
margin_right = 1208.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 4
custom_styles/slider = SubResource( 1 )
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DummyProgress" type="HSlider" parent="PanelContainer/MarginC/VBoxC/PlayInfo/Progress"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
step = 0.1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TimeEnd" type="Label" parent="PanelContainer/MarginC/VBoxC/PlayInfo"]
margin_left = 1216.0
margin_right = 1216.0
margin_bottom = 65.0
custom_fonts/font = ExtResource( 4 )
align = 2

[node name="ControlAdvanced" type="HBoxContainer" parent="PanelContainer/MarginC/VBoxC"]
margin_top = 145.0
margin_right = 1216.0
margin_bottom = 241.0
rect_min_size = Vector2( 0, 96 )
alignment = 1

[node name="AB" type="Button" parent="PanelContainer/MarginC/VBoxC/ControlAdvanced"]
margin_left = 508.0
margin_right = 604.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 0 )
text = "A>"

[node name="Mode" type="TextureButton" parent="PanelContainer/MarginC/VBoxC/ControlAdvanced"]
margin_left = 612.0
margin_right = 708.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 0 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5

[node name="ControlBasic" type="HBoxContainer" parent="PanelContainer/MarginC/VBoxC"]
margin_top = 249.0
margin_right = 1216.0
margin_bottom = 345.0
rect_min_size = Vector2( 0, 96 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Previous" type="TextureButton" parent="PanelContainer/MarginC/VBoxC/ControlBasic"]
margin_right = 236.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="Rewind" type="TextureButton" parent="PanelContainer/MarginC/VBoxC/ControlBasic"]
margin_left = 244.0
margin_right = 481.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="Play" type="TextureButton" parent="PanelContainer/MarginC/VBoxC/ControlBasic"]
margin_left = 489.0
margin_right = 726.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="FastForward" type="TextureButton" parent="PanelContainer/MarginC/VBoxC/ControlBasic"]
margin_left = 734.0
margin_right = 971.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="Next" type="TextureButton" parent="PanelContainer/MarginC/VBoxC/ControlBasic"]
margin_left = 979.0
margin_right = 1216.0
margin_bottom = 96.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 918.576
margin_top = -160.857
margin_right = 1038.58
margin_bottom = -35.8567
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5

[connection signal="finished" from="AudioStreamPlayer" to="." method="_on_AudioStreamPlayer_finished"]
[connection signal="value_changed" from="PanelContainer/MarginC/VBoxC/PlayInfo/Progress" to="." method="_on_PlayProgress_value_changed"]
[connection signal="pressed" from="PanelContainer/MarginC/VBoxC/ControlAdvanced/AB" to="." method="_on_AB_pressed"]
[connection signal="pressed" from="PanelContainer/MarginC/VBoxC/ControlAdvanced/Mode" to="." method="_on_Mode_pressed"]
[connection signal="pressed" from="PanelContainer/MarginC/VBoxC/ControlBasic/Rewind" to="." method="_on_Backward_pressed"]
[connection signal="pressed" from="PanelContainer/MarginC/VBoxC/ControlBasic/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="PanelContainer/MarginC/VBoxC/ControlBasic/FastForward" to="." method="_on_Forward_pressed"]
